# novelcraft-ai

./: .gitignore  20250603_chapter_reviser.py  2025060702_outline_reviser.py  20250609_single_chapter_reviser.py  20250611_single_chapter_reviser.py  20250716_chapter_reviser.py  20260607_outline_reviser.py  How To Edit The First Draft Of A Novel.docx  LICENSE  README.md  _chapter_reviser.py  ai_remediator.py  alignment_checker.py  analyze_style.py  chapter_analyzer.py  chapter_analyzer_OpenAI.py  chapter_analyzer_help.md  chapter_reviser.py  chapter_reviser_20250803 copy.py  chapter_revision_report.md  chapter_revision_report.txt  chapter_splitter.py  character_manager.py  claude_single_chapter_reviser.py  combined.md  fix_dialogue.py  inspiration.py  instructed_revise.py  json_to_markdown.py  jules_chapter_reviser.py  merge_md.py  minimal_enhance.py  old3_single_chapter_reviser.py  old_novel_reviser.py  old_single_chapter_reviser.py  outline_reviser.py  outliner.py  package-lock.json  perplexity_boost.py  pyproject.toml  (+21 more)
.github/workflows/: ci.yml
alive/: characters.md  outline.md  project.json  snowflake.json  synopsis.md  volkov_outline.md
chapters/: outline.md  synopsis.md
examples/: basic_usage.py
gatsby/: full.txt
gatsby/analysis_reports/: Editorial_Report_Gatsby.md
gatsby/chapters/: 01_chapter_01.md  02_chapter_02.md  03_chapter_03.md
glasshouse/: characters.md  fulldraft2.txt  outline.md  project.json  project_backup.json  quick_import.py  synopsis.md
glasshouse/chapters/: chapter_00.md  chapter_01.md  chapter_02.md  chapter_03.md  chapter_04.md  chapter_05.md  chapter_06.md  chapter_08.md  chapter_09.md  chapter_10.md  chapter_11.md  chapter_12.md  chapter_13.md  chapter_15.md  chapter_16.md  chapter_17.md  chapter_18.md  chapter_19.md  chapter_20.md  chapter_21.md  chapter_22.md  chapter_23.md  chapter_24.md
my_novel/: characters.md  outline.md  project.json  synopsis.md
my_novel/chapters/: 01_chapter_1.md  02_chapter_2.md  03_chapter_3.md  04_chapter_4.md  05_chapter_5.md  06_chapter_6.md  07_chapter_7.md  08_chapter_8.md  09_chapter_9.md  (+4 more)
novelcraft/: __init__.py
revised/: chapter_00_revised.md
sample/: 01_chapter_01.md
test-novel/: characters.md  outline.md  project.json
tests/: test_basic.py
tinker/: full.md
(+74 files in other folders)
